<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lxd.updatecurrenttime.activity.Way1Activity">

    <TextView
        android:id="@+id/current_time1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/current_time"
        android:textColor="@android:color/holo_red_light"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/start_update1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_time1"
        android:layout_marginTop="20dp"
        android:text="@string/start_update"/>

    <Button
        android:id="@+id/stop_update1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_update1"
        android:layout_marginTop="20dp"
        android:text="@string/stop_update"/>
</RelativeLayout>
