<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lxd.kcjiansb.MainActivity">

    <TextView
        android:id="@+id/current_time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="当前时间"/>

    <Button
        android:id="@+id/start_update2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/current_time1"
        android:layout_marginTop="20dp"
        android:text="@string/start_update"/>

    <Button
        android:id="@+id/stop_update2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_update2"
        android:layout_marginTop="20dp"
        android:text="@string/stop_update"/>

    <Button
        android:id="@+id/way1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/way1"/>
</RelativeLayout>
